--- a/src/algorithm/data-structure/数据结构.md
+++ b/src/algorithm/data-structure/数据结构.md
@@ -2,14 +2,27 @@
 
 ## 线性数据结构
 
-数组 (Array)
-链表 (Linked List)
-栈 (Stack)
-队列 (Queue)
+- 数组 (Array)
+
+- 链表 (Linked List)
+
+- 栈 (Stack)
+
+  剑指 Offer 30. 包含min函数的栈 <https://leetcode.cn/problems/yong-liang-ge-zhan-shi-xian-dui-lie-lcof/>
+  (同主站155.最小栈 <https://leetcode.cn/problems/min-stack/>)
+
+- 队列 (Queue)
+  剑指 Offer 09. 用两个栈实现队列 <https://leetcode.cn/problems/yong-liang-ge-zhan-shi-xian-dui-lie-lcof/>
+  剑指 Offer 06. 从尾到头打印链表 <https://leetcode.cn/problems/cong-wei-dao-tou-da-yin-lian-biao-lcof/>
+  剑指 Offer 24. 反转链表 <https://leetcode.cn/problems/fan-zhuan-lian-biao-lcof/>
+  剑指 Offer 35. 复杂链表的复制 <https://leetcode.cn/problems/fu-za-lian-biao-de-fu-zhi-lcof/>
+
+- 字符串
+  剑指 Offer 05. 替换空格 <https://leetcode.cn/problems/ti-huan-kong-ge-lcof/>
 
 ## 非线性数据结构
 
-树 (Tree)
-堆 (Heap)
-散列表 (Hashing)
-图 (Graph)
+- 树 (Tree)
+- 堆 (Heap)
+- 散列表 (Hashing)
+- 图 (Graph)
